# xiongjia.github.com

./: .gitignore  404.html  README.md  _config.yml  env-siteselfhost  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  index.md  mkdocs.yml  pyproject.toml  rss.xml  sitemap.xml
.github/workflows/: deploy.yml
_posts/dev/: 2013-09-29-ms-uiautomation-in-powershell.md  2013-10-07-nodejs-tips.md  2014-01-05-psuia.md  2014-02-02-vimwiki.md  2014-03-02-ractivejs.md  2014-05-18-ab.md  2014-06-28-vim-fanfou.md  2014-10-07-database-practice.md  2015-06-23-shell-problems.md  2015-07-12-windows-job-objects.md  2015-07-25-tsunami-udp-file-transfer.md  2015-08-01-copying-an-aws-ami-to-aws-china.md  2015-08-08-vxtrans.md  2015-08-16-boost-asio-practice.md  2015-08-22-azure-china-tips.md  2015-08-29-boost-unit-test-practice.md  2015-09-12-vim-encryption.md  2015-09-18-simple-data-visualization.md  2015-09-26-shell-tips.md  2015-11-08-a-basic-vim-plugin.md  2016-08-07-js-promise.md  2017-11-26-gradle-dependency-lock.md  2018-08-19-build-vim-on-windows.md  2020-04-19-http-keepalive.md
_posts/misc/: 2013-08-31-first-post.md  2014-04-11-movie-silenced.md  2015-07-18-package-a-comic-book.md  2015-07-31-video-downloader.md  2015-09-04-minecraft-and-joystick.md
_site/: index.html
docs/: index.md
docs/notes/: .authors.yml  index.md
docs/tech/: backend.md  collection.md  frontend.md  index.md  tech1.md
notes/: index.html
overrides/: main.html
search/: search_index.json
tech/backend/: index.html
tech/frontend/: index.html
(+27 files in other folders)
