[project]
name = "xiongjia.github.com"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "xiongjia", email = "lexiongjia@gmail.com" }]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-drawio-exporter>=0.10.2",
    "mkdocs-drawio>=1.11.2",
    "mkdocs-rss-plugin>=1.17.3",
    "mkdocs-glightbox>=0.4.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
server = { cmd = "mkdocs serve" }
build = { cmd = "mkdocs build" }
